# my_lox

./: default.nix  readme.md
.github/workflows/: run-tests.yaml
lox/: dune-project  lox.opam
lox/_build/: .db  .digest-db  log
lox/_build/default/: META.lox  lox.dune-package  lox.install  lox.opam
lox/_build/default/.dune/: configurator  configurator.v2
lox/_build/default/.ppx/b25831a27f6cc3ffc0d27a4be900dbfc/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
lox/_build/default/lib/: lox.cma  lox.cmxa  lox.cmxs  lox_lib.cma  lox_lib.cmxa  lox_lib.cmxs
lox/_build/default/lib/.merlin-conf/: lib-lox  lib-lox_lib
lox/_build/default/src/: ast.ml  ast.pp.ml  builtins.pp.ml  interpreter.ml  interpreter.pp.ml  lox.cma  lox.cmxa  lox.cmxs  lox.ml-gen  main.ml  parser.ml  parser.pp.ml  resolver.ml  resolver.pp.ml  scanner.pp.ml  token.ml  token.pp.ml
lox/_build/default/src/.lox.objs/: lox__Ast.impl.d  lox__Builtins.impl.all-deps  lox__Builtins.impl.d  lox__Interpreter.impl.d  lox__Parser.impl.all-deps  lox__Parser.impl.d  lox__Resolver.impl.d  lox__Scanner.impl.all-deps  lox__Scanner.impl.d  lox__Token.impl.d
lox/_build/default/test/: run_scripts.sh
lox/lib/: dune
lox/src/: ast.ml  builtins.ml  dune  interpreter.ml  main.ml  parser.ml  resolver.ml  scanner.ml  token.ml
lox/test/: dune  run_scripts.sh  script_cases.ml  test_lox.ml
lox/test/cases/: class_basic.out  err_self_inherit.err  err_super_without_parent.err  function_closure_simple.lox  function_return_nil.lox  initializer_chain.out  lambda_immediate_call.lox  named_args_basic.lox  named_args_duplicate.err
(+105 files in other folders)
