(lang dune 3.19)

(name lox)

(generate_opam_files true)

(source
 (github b-rodrigues/my_lox))

(authors "Bruno Rodrigues <bruno@brodrigues.co>")

(maintainers "Bruno Rodrigues <bruno@brodrigues.co>")

(license EUPL)

(documentation https://url/to/documentation)

(package
 (name lox)
 (synopsis "Lox, but in Ocaml")
 (description "My attempt at building the toy language Lox from Crafting Interpreters using Ocaml")
 (depends ocaml dune linenoise ppx_deriving)
 (tags
  ("interpreter" "language" "lox" "crafting-interpreters")))
