(library
 (name lox)
 (public_name lox)
 (modules token scanner ast parser interpreter) ;; list all your library modules here, add more as you create them
 (preprocess (pps ppx_deriving.show ppx_deriving.eq))
)

(executable
 (name main)
 (public_name lox)
 (modules main)
 (libraries lox linenoise)
)
